<resources>
    <string name="app_name">Foody</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="recipes_fragment">Recipes</string>
    <string name="favorite_recipes_fragment">Favorites</string>
    <string name="food_joke_fragment">Food Joke</string>
    <string name="unknown_error">Unknown Error</string>
    // Bottom Sheet
    <string name="meal_type">Meal Type</string>
    <string name="main_course">Main Course</string>
    <string name="side_dish">Side Dish</string>
    <string name="dessert">Dessert</string>
    <string name="appetizer">Appetizer</string>
    <string name="salad">Salad</string>
    <string name="bread">Bread</string>
    <string name="breakfast">Breakfast</string>
    <string name="soup">Soup</string>
    <string name="beverage">Beverage</string>
    <string name="sauce">Sauce</string>
    <string name="marinade">Marinade</string>
    <string name="fingerfood">FingerFood</string>
    <string name="snack">Snack</string>
    <string name="drink">Drink</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="paleo">Paleo</string>
    <string name="primal">Primal</string>
    <string name="whole30">Whole30</string>
    <string name="diet_type">Diet Type</string>
    <string name="apply">Apply</string>
    <string name="recipes">Recipes</string>
    <string name="favorite">Favorite</string>
    <string name="joke">Joke</string>
    <string name="content_description">contentDescription</string>

    <string name="no_data">No data</string>
    <string name="search">Search</string>
    <string name="overview">Overview</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>

    <string name="saved_to_favorites">Saved to Favorites</string>
    <string name="removed_from_favorites">Removed from Favorites</string>
    <string name="cheap">Cheap</string>
    <string name="healthy">Healthy</string>

    <string name="dairy_free">Dairy Free</string>
    <string name="save_to_favorites">Save to Favorites</string>
    <string name="no_favorite_recipes">No Favorite Recipes.</string>
    <string name="delete_favorites">Delete Favorites</string>

    <string name="items_selected">%d items selected</string>
    <string name="recipes_removed">Recipes removed</string>
    <string name="item_selected">1 item selected</string>
    <string name="delete_all">Delete All</string>
    <string name="deleted">Deleted</string>
    <string name="share">Share</string>

    <plurals name="items_selected_plurals">
        <item quantity="one">@string/item_selected</item>
        <item quantity="other">@string/items_selected</item>
    </plurals>

    <string name="no_internet_connection">No internet connection</string>
    <string name="not_found">Not found</string>
</resources>