<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="result"
            type="com.example.domain.models.RecipeDomain" />
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor"
        app:layoutDescription="@xml/fragment_overview_scene"
        tools:context="com.example.presentation.recipe.OverviewFragment">

        <ImageView
            android:id="@+id/main_imageView"
            loadImageFromUrl="@{result.image}"
            android:layout_width="0dp"
            android:layout_height="@dimen/big_image_size"
            android:contentDescription="@string/content_description"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <View
            android:id="@+id/gradient_overlay"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:background="@drawable/gradient_overlay"
            app:layout_constraintBottom_toBottomOf="@+id/main_imageView"
            app:layout_constraintEnd_toEndOf="@+id/main_imageView"
            app:layout_constraintStart_toStartOf="@+id/main_imageView"
            app:layout_constraintTop_toTopOf="@+id/main_imageView"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/time_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="12dp"
            android:text="@{String.valueOf(result.readyInMinutes)}"
            android:textColor="@color/white"
            android:textSize="@dimen/def_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/gradient_overlay"
            app:layout_constraintEnd_toEndOf="@+id/main_imageView"
            tools:text="100" />

        <ImageView
            android:id="@+id/time_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_description"
            android:src="@drawable/ic_clock"
            app:layout_constraintBottom_toTopOf="@+id/time_textView"
            app:layout_constraintEnd_toEndOf="@+id/time_textView"
            app:layout_constraintStart_toStartOf="@+id/time_textView"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/likes_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:text="@{String.valueOf(result.aggregateLikes)}"
            android:textColor="@color/white"
            android:textSize="@dimen/def_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/time_textView"
            app:layout_constraintEnd_toStartOf="@+id/time_textView"
            tools:text="100" />

        <ImageView
            android:id="@+id/likes_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_description"
            android:src="@drawable/ic_heart"
            app:layout_constraintBottom_toTopOf="@+id/likes_textView"
            app:layout_constraintEnd_toEndOf="@+id/likes_textView"
            app:layout_constraintStart_toStartOf="@+id/likes_textView"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/title_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="12dp"
            android:fontFamily="@font/courgette"
            android:text="@{result.title}"
            android:textColor="@color/titleColor"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gradient_overlay"
            tools:text="TextView" />

        <ImageView
            android:id="@+id/vegetarian_imageView"
            applyVeganColor="@{result.vegetarian}"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/content_description"
            android:src="@drawable/ic_checkmark"
            app:layout_constraintStart_toStartOf="@+id/title_textView"
            app:layout_constraintTop_toBottomOf="@+id/title_textView"
            app:tint="@color/itemColor" />

        <TextView
            android:id="@+id/vegetarian_textView"
            andlyVeganColor="@{result.vegetarian}"
            approid:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/vegetarian"
            android:textColor="@color/itemColor"
            app:layout_constraintBottom_toBottomOf="@+id/vegetarian_imageView"
            app:layout_constraintStart_toEndOf="@+id/vegetarian_imageView"
            app:layout_constraintTop_toTopOf="@+id/vegetarian_imageView" />


        <ImageView
            android:id="@+id/vegan_imageView"
            andlyVeganColor="@{result.vegan}"
            approid:layout_marginTop="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_description"
            android:src="@drawable/ic_checkmark"
            app:layout_constraintStart_toStartOf="@+id/title_textView"
            app:layout_constraintTop_toBottomOf="@+id/vegetarian_imageView"
            app:tint="@color/itemColor" />

        <TextView
            android:id="@+id/vegan_textView"
            andlyVeganColor="@{result.vegan}"
            approid:layout_marginBottom="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/vegan"
            android:textColor="@color/itemColor"
            app:layout_constraintBottom_toBottomOf="@+id/vegan_imageView"
            app:layout_constraintStart_toEndOf="@+id/vegan_imageView"
            app:layout_constraintTop_toTopOf="@+id/vegan_imageView" />

        <ImageView
            android:id="@+id/gluten_free_imageView"
            andlyVeganColor="@{result.glutenFree}"
            approid:layout_marginStart="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_description"
            android:src="@drawable/ic_checkmark"
            app:layout_constraintBottom_toBottomOf="@+id/vegetarian_textView"
            app:layout_constraintStart_toEndOf="@+id/vegetarian_textView"
            app:layout_constraintTop_toTopOf="@+id/vegetarian_textView"
            app:tint="@color/itemColor" />

        <TextView
            android:id="@+id/gluten_free_textView"
            andlyVeganColor="@{result.glutenFree}"
            approid:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gluten_free"
            android:textColor="@color/itemColor"
            app:layout_constraintBottom_toBottomOf="@+id/gluten_free_imageView"
            app:layout_constraintStart_toEndOf="@+id/gluten_free_imageView"
            app:layout_constraintTop_toTopOf="@+id/gluten_free_imageView" />

        <ImageView
            android:id="@+id/dairy_free_imageView"
            andlyVeganColor="@{result.dairyFree}"
            approid:layout_marginTop="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_description"
            android:src="@drawable/ic_checkmark"
            app:layout_constraintStart_toStartOf="@+id/gluten_free_imageView"
            app:layout_constraintTop_toBottomOf="@+id/gluten_free_imageView"
            app:tint="@color/itemColor" />

        <TextView
            android:id="@+id/dairy_free_textView"
            andlyVeganColor="@{result.dairyFree}"
            approid:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dairy_free"
            android:textColor="@color/itemColor"
            app:layout_constraintBottom_toBottomOf="@+id/dairy_free_imageView"
            app:layout_constraintStart_toEndOf="@+id/dairy_free_imageView"
            app:layout_constraintTop_toTopOf="@+id/dairy_free_imageView" />

        <ImageView
            android:id="@+id/healthy_imageView"
            andlyVeganColor="@{result.veryHealthy}"
            approid:layout_marginStart="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_description"
            android:src="@drawable/ic_checkmark"
            app:layout_constraintBottom_toBottomOf="@+id/gluten_free_textView"
            app:layout_constraintStart_toEndOf="@+id/gluten_free_textView"
            app:layout_constraintTop_toTopOf="@+id/gluten_free_textView"
            app:tint="@color/itemColor" />

        <TextView
            android:id="@+id/healthy_textView"
            andlyVeganColor="@{result.veryHealthy}"
            approid:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/content_description"
            android:text="@string/healthy"
            android:textColor="@color/itemColor"
            app:layout_constraintBottom_toBottomOf="@+id/healthy_imageView"
            app:layout_constraintStart_toEndOf="@+id/healthy_imageView"
            app:layout_constraintTop_toTopOf="@+id/healthy_imageView" />

        <ImageView
            android:id="@+id/cheap_imageView"
            androieganColor="@{result.cheap}"
            applyVd:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/content_description"
            android:src="@drawable/ic_checkmark"
            app:layout_constraintStart_toStartOf="@+id/healthy_imageView"
            app:layout_constraintTop_toBottomOf="@+id/healthy_imageView"
            app:tint="@color/itemColor" />

        <TextView
            android:id="@+id/cheap_textView"
            applyVeganColor="@{result.cheap}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/cheap"
            android:textColor="@color/itemColor"
            app:layout_constraintBottom_toBottomOf="@+id/cheap_imageView"
            app:layout_constraintStart_toEndOf="@+id/cheap_imageView"
            app:layout_constraintTop_toTopOf="@+id/cheap_imageView" />

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vegan_imageView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/summary"
                    parseHtml="@{result.summary}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/def_text_size"
                    tools:text="TextView" />
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>